# keybinds

./: CMakeLists.txt  LICENSE  README.md
lib/cmake/ftxui/: ftxui-targets.cmake
lib/pkgconfig/: ftxui.pc
src/: keybind_store.hpp  main.cpp
